[project]
name = "stremlit-myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "olefile>=0.47",
    "openai>=2.43.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
